<resources>
    <string name="app_name">Exemplo Radio Button</string>

    <string name="label_forma_pgto">Forma de Pagamento:</string>
    <string name="label_a_vista">A Vista</string>
    <string name="label_30_dias">30 Dias</string>

    <string name="label_2x">Parcelado em 2x</string>
    <string name="label_3x">Parcelado em 3x</string>
    <string name="label_selecionado">Forma de PGTO selecionada:</string>

</resources>